<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    tools:context=".confirmacion">
    <TextView
        android:id="@+id/txCD1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margeny_1"
        android:text="@string/confirmar"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/titulo"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/llCD1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/margenx_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txCD1">
        <TextView
            android:id="@+id/txCDN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreus"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/texto_2"/>
        <TextView
            android:id="@+id/txCDN1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreus"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/texto_2"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llCD2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/margenx_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llCD1">
        <TextView
            android:id="@+id/txCDF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nas"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/texto_2" />
        <TextView
            android:id="@+id/txCDF1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreus"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/texto_2"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llCD3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/margenx_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llCD2">
        <TextView
            android:id="@+id/txCDT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/texto_2"/>
        <TextView
            android:id="@+id/txCDT1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreus"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/texto_2"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llCD4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/margenx_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llCD3">
        <TextView
            android:id="@+id/txCDE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/texto_2"/>
        <TextView
            android:id="@+id/txCDE1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreus"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/texto_2"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llCD5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/margenx_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llCD4">
        <TextView
            android:id="@+id/txCDD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descrip"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/texto_2"/>
        <TextView
            android:id="@+id/txCDD1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreus"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/texto_2"/>
    </LinearLayout>
    <Button
        android:id="@+id/btCDE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margeny_2"
        android:text="@string/edit"
        android:theme="@style/Button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llCD5" />


</androidx.constraintlayout.widget.ConstraintLayout>